fix: Readme update, css dark mode color updates

--- a/src/TodoApp/components/TodoFilter/style.module.css
+++ b/src/TodoApp/components/TodoFilter/style.module.css
@@ -15,6 +15,8 @@
     line-height: 1.4rem;
     letter-spacing: -0.194444px;
     cursor: pointer;
+    border-end-end-radius: 0.7rem;
+    border-end-start-radius: 0.7rem;
 }
 
 .all,
