--- a/src/TodoApp/layout/TodoLayout/style.module.css
+++ b/src/TodoApp/layout/TodoLayout/style.module.css
@@ -90,5 +90,20 @@
     padding-top: 2.4rem;
     display: flex;
     flex-direction: column;
+    box-shadow: 0rem 3.5rem 5rem -1.5rem var(--shadow-color);
+}
 
+.drag_note {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 4.9rem;
+    color: var(--filter-text-color);
+    font-family: 'Josefin Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1.4rem;
+    line-height: 1.4rem;
+    text-align: center;
+    letter-spacing: -0.194444px;
 }
