--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,7 @@ body.dark {
   --background-color: var(--dark-neutral-Very-Dark-Blue);
   --completed-text-color: var(--dark-neutral-Very-Dark-Grayish-Blue);
   --todo-text-color: var(--dark-neutral-Light-Grayish-Blue);
-  --shadow-color: var(--dark-neutral-Light-Grayish-Blue);
+  --shadow-color: var(--dark-neutral-Very-Dark-Blue);
   --filter-text-color: var(--dark-neutral-Dark-Grayish-Blue);
   --todo-check-border-color: var(--dark-neutral-Very-Dark-Blue);
   --todo-item-background: var(--dark-neutral-Very-Dark-Desaturated-Blue);
@@ -61,23 +61,6 @@ body.dark {
 
 }
 
-/* body {
-
-  --logo-text: var(--light-neutral-Light-Grayish-Blue);
-  --background-color: var(--light-neutral-Very-Light-Grayish-Blue);
-  --completed-text-color: var(--light-neutral-Dark-Grayish-Blue);
-  --todo-text-color: var(--light-neutral-Very-Dark-Grayish-Blue);
-  --shadow-color: var(--light-neutral-Dark-Grayish-Blue);
-  --filter-text-color: var(--light-neutral-Dark-Grayish-Blue);
-  --todo-check-border-color: var(--light-neutral-Light-Grayish-Blue);
-  --todo-item-background: white;
-  --todo-input: var(--light-neutral-Dark-Grayish-Blue);
-  --filter-text-hover: var(--light-neutral-Dark-Grayish-Blue);
-  --filter-text-upper: var(--light-neutral-Dark-Grayish-Blue);
-  --cross-icon: var(--light-neutral-Very-Dark-Grayish-Blue);
-  --item-border-bottom: #979797;
-
-} */
 
 html {
   font-size: 62.5%;
